<!DOCTYPE resources [
<!ENTITY rsquo  "&#8217;">
]>
<resources>
    <string name="app_name">Klinq</string>
    <string name="advertisement_text">or 4 interest-free payments\n<b>0.88 KWD </b>.<u>Learn More</u></string>
    <string name="color">Color:</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="product_information">Product Information</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="share">Share</string>
</resources>